@@ -1,27 +1,30 @@
 package org.docear.plugin.services.recommendations;
 
-import java.net.URI;
+import java.net.MalformedURLException;
+import java.net.URL;
 
 public class RecommendationEntry {
 
 	private final String title;
-	private final URI link;
+	private final URL link;
+	private final URL clickUrl;
 	
-	public RecommendationEntry(String title, String url) {
+	public RecommendationEntry(String title, String url, String clickUrl) throws MalformedURLException {
 		this.title = title;
-		this.link = (url==null ? null:URI.create(url));
+		this.link = (url==null ? null:new URL(url));
+		this.clickUrl = (clickUrl==null ? null:new URL(clickUrl));
 	}
 
 	public String getTitle() {
 		return title;
 	}
 
-	public URI getLink() {
+	public URL getLink() {
 		return link;
 	}
-
-	public URI getLinkUrl() {
-		return null;
+	
+	public URL getClickUrl() {
+		return clickUrl;
 	}
 
 }
